Fix IE7/8 dropdown bug by removing filter. Refactor JS for dropdown and shift the hide/show styles entirely into the CSS

--- a/css/patterns.css
+++ b/css/patterns.css
@@ -159,7 +159,6 @@
     overflow: visible;
     height: 40px;
     background-color: #222;
-    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#333333', endColorstr='#222222', GradientType=0);
     background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#333), to(#222));
     background-image: -webkit-linear-gradient(#333, #222);
     background-image: -moz-linear-gradient(#333, #222);
@@ -374,6 +373,10 @@
     -webkit-box-shadow: 0 1px 2px rgba(0, 0, 0, 0.6);
     -moz-box-shadow: 0 1px 2px rgba(0, 0, 0, 0.6);
     box-shadow: 0 1px 2px rgba(0, 0, 0, 0.6);
+}
+
+.topbar .open ul {
+    display: block;
 }
 
 .topbar ul li ul li {
@@ -729,7 +732,7 @@
     left: 0;
     right: 0;
     bottom: 0;
-    z-index: 1000;
+    z-index: 2000;
     background-color: rgba(0, 0, 0, 0.5);
 }
 
@@ -737,7 +740,7 @@
     position: fixed;
     top: 50%;
     left: 50%;
-    z-index: 2000;
+    z-index: 3000;
     width: 560px;
     margin: -280px 0 0 -250px;
     background-color: #fff;
